<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/calculateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/calculate"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/functionSpinner"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/calculateTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/findTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/find_costs"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateTextView" />

    <Spinner
        android:id="@+id/producerSpinner"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toEndOf="@+id/findTextView"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView" />

    <TextView
        android:id="@+id/sortCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/sort"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findTextView" />

    <Button
        android:id="@+id/okButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="okButtonCalculate"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/okButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="okButtonFind"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/okButton1" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="426dp"
        android:layout_height="299dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

    </ListView>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backButton"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/functionTextView"
        android:layout_width="69dp"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:text="@string/function"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/functionSpinner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/producerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/producer"
        android:textSize="8sp"
        app:layout_constraintEnd_toStartOf="@+id/okButton2"
        app:layout_constraintStart_toEndOf="@+id/producerSpinner"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="163dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toEndOf="@+id/sortCostTextView"
        app:layout_constraintTop_toBottomOf="@+id/findTextView">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sortByCostButton"
            android:text="@string/cost" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cortByFeedTitleButton"
            android:text="@string/feed_title" />
    </RadioGroup>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/result"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/okButton1"
        app:layout_constraintStart_toEndOf="@+id/functionTextView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>